devtools/laymos/test/fixtures/story-ejection/invalid/dynamic-decision-key.ts
import { decision } from 'laymos/story';

export const value = decision('Choice', {}, input)
  .when(key, {}, () => effect)
  .exhaustive();
